<resources>
    <string name="app_name">Photos</string>
    <string name="action_settings">Settings</string>


    <string name="openAlbum">Open Album</string>
    <string name="createAlbum">Create Album</string>
    <string name="deleteAlbum">Delete Album</string>
    <string name="renameAlbum">Rename Album</string>
    <string name="searchPhotos">Search Photos</string>

    <string name="albumLabel">New Album Name:</string>
    <string name="confirmLabel">Confirm</string>

    <string name="title_activity_add_rename_album">Add/Rename Album</string>
    <string name="title_activity_album_view">Album View</string>
    <string name="title_activity_photo_edit">Photo Edit/Display</string>
    <string name="title_activity_move_photo">Move Photo</string>
    <string name="title_activity_search_photos">Search Photos</string>
    <string name="title_activity_tag_filter">Filter by Tag(s)</string>
    <string name="title_edit_tag">Add/Delete Tag</string>

    <string name="oneTag">Search One Tag</string>
    <string name="twoTagOr">Search Two Tags (OR)</string>
    <string name="twoTagAnd">Search Two Tags (AND)</string>

    <string name="displayPhoto">Display Photo</string>
    <string name="addPhoto">Add Photo</string>
    <string name="deletePhoto">Delete Photo</string>
    <string name="movePhoto">Move Photo</string>

    <string name="slideshowReverse">Slideshow Reverse</string>
    <string name="slideshowForward">Slideshow Forward</string>
    <string name="addTag">Add Tag</string>
    <string name="deleteTag">Delete Tag</string>

    <string name="tagCategory">Please input tag Category ("Location" or "Person")</string>
    <string name="tagValue">Please input tag Value</string>

</resources>