<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:padding="20dp">

    <!--  Album label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/tagCategory"
        />

    <!-- Album field -->
    <EditText
        android:id="@+id/tagCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background" />


    <!--  Album label -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="2dp"
        android:text="@string/tagValue"
        />

    <!-- Album field -->
    <EditText
        android:id="@+id/tagValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:drawable/editbox_background" />

    <Button
        android:id="@+id/album_confirm"
        style="?android:attr/buttonBarButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="15dp"
        android:onClick="confirm"
        android:text="@string/confirmLabel"
        android:textSize="16sp"
        app:backgroundTint="@null" />
</LinearLayout>

