<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPhotos">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Photos.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/Theme.Photos.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <ListView
        android:id="@+id/literal_photo_list"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:divider="@color/purple_500"
        android:dividerHeight="1px"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/buttonOneTag"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <Button
        android:id="@+id/buttonOneTag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="oneTag"
        android:text="@string/oneTag"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwoOr"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/buttonTwoOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="twoTagOr"
        android:text="@string/twoTagOr"
        app:layout_constraintBottom_toTopOf="@+id/buttonTwoAnd"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/buttonTwoAnd"
        android:layout_width="match_parent"
        android:layout_height="47dp"
        android:onClick="twoTagAnd"
        android:text="@string/twoTagAnd"
        app:layout_constraintBottom_toBottomOf="parent"
        tools:layout_editor_absoluteX="0dp" />


</androidx.constraintlayout.widget.ConstraintLayout>
